# Agentic-Ai-Recruiter

./: .gitignore  FINAL_SUMMARY.md  LOGGING_DEMO.py  LOGGING_GUIDE.md  MEMORY_FIX_SUMMARY.md  MOCK_TEST_RESULTS.md  MODEL_UPDATE_SUMMARY.md  PIPELINE_DIAGRAM.txt  PRESENTATION_DIAGRAMS.md  PRESENTATION_SLIDES.md  QUICK_REFERENCE.md  REACT_APP_GUIDE.md  README.md  SCORER_AND_REFINER_SUMMARY.md  test_memory_fix.py  test_new_model.py  test_pipeline_gpu.py  test_pipeline_mock.py  test_pipeline_mock_simple.py  test_scorer_and_refiner.py
ai-recruiter/: .gitignore  README.md  main.py  model_cache  pyproject.toml
ai-recruiter/agents/: README.md
ai-recruiter/agents/avatar/: README.md  __init__.py  agent.py  agent_adapter.py  viseme_engine.py
ai-recruiter/agents/common/: README.md  a2a_client.py  base_agent.py  pubsub_client.py  schemas.py
ai-recruiter/agents/jd_generation/: INTEGRATION.md  __init__.py  agent.py  agent_card.json  api.py  config.py  service.py
ai-recruiter/agents/matching/: README.md  __init__.py  agent.py  agent_card.json  api.py
ai-recruiter/agents/nlp/: QUICKSTART.md  README.md  __init__.py  agent.py  agent_adapter.py  agent_card.json  api.py  interview_planner.py  interview_state.py  question_generator.py  question_refiner.py  requirements.txt  response_scorer.py  server.py  start_server.sh  test.py  test_client.py  tts_engine.py  vllm_engine.py
ai-recruiter/agents/orchestrator/: README.md  __init__.py  agent.py  agent_card.json  edges.py  nodes.py  state.py
ai-recruiter/agents/recruit/: __init__.py  agent.py  api.py  db.py  jd_gen.py
ai-recruiter/agents/scoring/: README.md  __init__.py  agent.py  agent_card.json  llm_client.py  prompts.py  reader.py  report.py  schema.py  scorer.py
ai-recruiter/agents/vision/: README.md  __init__.py  agent.py  agent_card.json
ai-recruiter/agents/voice/: README.md  __init__.py  agent.py  stt.py
ai-recruiter/api/: README.md
ai-recruiter/api/a2a/: README.md
ai-recruiter/api/grpc/: README.md
ai-recruiter/api/rest/: README.md
ai-recruiter/api/websocket/: README.md
ai-recruiter/apps/: README.md
ai-recruiter/apps/behavior/: vite.config.js
ai-recruiter/apps/hireflow/: index.html  package-lock.json  package.json  vite.config.ts
ai-recruiter/apps/interview/: README.md  start-react-demo.sh  vite.config.js
ai-recruiter/apps/screening/: README.md  package-lock.json
ai-recruiter/artifacts/: README.md
ai-recruiter/artifacts/scoring/: int-ab559cccc6eb_report.json  int-ab559cccc6eb_report.md  int-dbd7ee96b2a3_report.json  int-dbd7ee96b2a3_report.md  sess-x.jsonl
ai-recruiter/configs/: README.md  __init__.py  runtime.yaml
ai-recruiter/configs/agents/: README.md
ai-recruiter/configs/models/: README.md
ai-recruiter/configs/prompts/: README.md
ai-recruiter/core/: README.md  __init__.py
ai-recruiter/core/contracts/: __init__.py  a2a.py  base_agent.py  health.py
ai-recruiter/core/memory/: README.md
ai-recruiter/core/messaging/: README.md
ai-recruiter/core/observability/: __init__.py  logging.py
ai-recruiter/core/protocols/: README.md
ai-recruiter/core/runtime/: __init__.py  lifespan.py  registry.py
ai-recruiter/core/state/: README.md
ai-recruiter/data/: README.md
ai-recruiter/data/exports/: README.md
ai-recruiter/data/processed/: README.md
ai-recruiter/data/raw/: README.md
ai-recruiter/docs/: README.md
ai-recruiter/docs/agents/: README.md
ai-recruiter/docs/api/: README.md
ai-recruiter/docs/architecture/: README.md  adaptability.md  agentic-interview-loop.md
ai-recruiter/docs/ml/: README.md
ai-recruiter/docs/report/: 0-i-signature.tex  0-ii-abstract.tex  0-iii-Remerciements.tex  0-introduction.tex  2-conclusion.tex  (+31 more)
ai-recruiter/ml/: README.md
ai-recruiter/scripts/: README.md  build_frontends.sh  seed_demo.py  verify_matching.py
ai-recruiter/tests/: README.md
(+363 files in other folders)
